<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/materialCardViewMain"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        app:cardBackgroundColor="#FFFFFF"
        app:cardCornerRadius="16dp"
        app:cardElevation="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:strokeColor="#00FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/logoMain"
                android:layout_width="120dp"
                android:layout_height="170dp"
                android:layout_gravity="center"
                android:layout_margin="8dp"
                android:scaleX="1.8"
                android:scaleY="1.8"
                app:srcCompat="@drawable/logo" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn0"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:onClick="startTraining"
                android:text="@string/btn_start"
                android:textAllCaps="true"
                android:textColor="@color/pink_color"
                app:backgroundTint="@color/blue_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:onClick="goTrainingHistory"
                android:text="@string/btn_history"
                android:textAllCaps="true"
                android:textColor="@color/pink_color"
                app:backgroundTint="@color/blue_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:onClick="goAllExercises"
                android:text="@string/btn_all_exs"
                android:textAllCaps="true"
                android:textColor="@color/pink_color"
                app:backgroundTint="@color/blue_color" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginVertical="8dp"
                android:onClick="goSettings"
                android:text="@string/btn_settings"
                android:textAllCaps="true"
                android:textColor="@color/pink_color"
                app:backgroundTint="@color/blue_color" />

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>

</androidx.constraintlayout.widget.ConstraintLayout>